reorganize this shit

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"interval_time": 10, "total_time": 720, "path_to_csv_file": "C:\\Users\\patryk\\GitHub\\facebook-online-friend-tracker\\data\\data.csv"}
+{"interval_time": 1, "path_to_csv_file": "C:\\Users\\patryk\\GitHub\\facebook-online-friend-tracker\\data\\data.csv"}
